<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">PWRApp</string>
    <string name="welcome_user">Welcome, User</string>
    <string name="logout">Logout</string>
    <string name="welcome_to_the_pwr_app">Welcome to the PWR App</string>
    <string name="your_routinesBtn">Your Routines</string>
    <string name="create_new_routine">Create New Routine</string>
    <string name="create_a_new_routine">Create a new routine</string>
    <string name="your_new_password">Your new password</string>
    <string name="password">Password</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="change_password">Change Password</string>
    <string name="confirm">Confirm</string>
    <string name="back">Back</string>
    <string name="find_routines">Find Routines</string>
    <string name="your_user_name">Your user name</string>
    <string name="user_name">User Name</string>
    <string name="edit_username">Edit Username</string>
    <string name="profile_details">Profile details</string>
    <string name="your_routines">Your Routines</string>
    <string name="email">Email</string>
    <string name="passwordLgn">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="profile_detailsHdr">Profile details</string>
    <string name="username">Username</string>
    <string name="getusername">getUsername</string>
    <string name="passwordTextPfl">Password</string>
    <string name="passwordHidden">************</string>
    <string name="email_address">Email Address</string>
    <string name="getemail">getEmail</string>
    <string name="edit_usernameBtn">Edit Username</string>
    <string name="edit_password">Edit Password</string>
    <string name="back_to_home">Back to home</string>
    <string name="registration_form">registration form</string>
    <string name="create_new_user">Create New User</string>
    <string name="user_nameText">User Name</string>
    <string name="disclaimer">I understand and agree that any injury sustained from training is not the fault or responsibility of the Workout creator user or the PWR App itself</string>
    <string name="passwordText">Password test</string>
    <string name="re_enter_passwordText">Re-enter Password</string>
    <string name="email_addressText">Email Address</string>
    <string name="age">Age</string>
    <string name="your_user_nameRgst">Your user name</string>
    <string name="passwordRgst">Password</string>
    <string name="reEnterPassword">Re-Enter Password</string>
    <string name="e_mail">E-mail</string>
    <string name="optional">(Optional)</string>
    <string name="wrong_page_return_to_login_here">Wrong Page? Return to Login here</string>
    <string name="registerPageBtn">Register</string>
    <string name="addExercise">Add Exercise</string>
    <string name="exerciseDtls">Exercise</string>
    <string name="sets">Sets</string>
    <string name="reps">Reps/Duration</string>
    <string name="name_of_exercise">Name of Exercise</string>
    <string name="numberSets">How many?</string>
    <string name="numberReps">How many?</string>
    <string name="workout_name">Workout Name</string>
    <string name="accept">Accept</string>
    <string name="discard">Discard</string>
    <string name="workoutColumnHeader">Workouts</string>
    <string name="dateCreatedColumnHeader">Date Created</string>
    <string name="no">No, stay.</string>
    <string name="yes">Yes, delete and go back.</string>
    <string name="logged_workouts">Logged workouts</string>
    <string name="log_workout">Log workout</string>
    <string name="submit">Submit</string>
    <string name="return_home">Return Home</string>
    <string name="search_workouts">Search Workouts</string>
    <string name="add_routine">Add Routine</string>
</resources>