<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradiant_bg"
    tools:context=".profileDetails">

    <TextView
        android:id="@+id/profileHeader"
        android:layout_width="370dp"
        android:layout_height="68dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/convergence"
        android:text="@string/profile_detailsHdr"
        android:textAlignment="center"
        android:textSize="54sp"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/username"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/convergence"
        android:text="@string/username"
        android:textSize="24sp"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileHeader" />

    <TextView
        android:id="@+id/getUsername"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/convergence"
        android:text="@string/getusername"
        android:textAlignment="textEnd"
        android:textSize="20sp"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileHeader" />

    <TextView
        android:id="@+id/password"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:fontFamily="@font/convergence"
        android:text="@string/passwordTextPfl"
        android:textSize="24sp"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <TextView
        android:id="@+id/getPassword"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/convergence"
        android:text="@string/passwordHidden"
        android:textAlignment="textEnd"
        android:textSize="20sp"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/getEmail" />

    <TextView
        android:id="@+id/email"
        android:layout_width="147dp"
        android:layout_height="82dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/convergence"
        android:text="@string/email_address"
        android:textSize="24sp"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <TextView
        android:id="@+id/getEmail"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/convergence"
        android:text="@string/getemail"
        android:textAlignment="textEnd"
        android:textSize="20sp"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/getUsername" />

    <Button
        android:id="@+id/editUserBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/convergence"
        android:text="@string/edit_usernameBtn"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/editPassBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/convergence"
        android:text="@string/edit_password"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/getPassword" />

    <Button
        android:id="@+id/backBtn"
        android:layout_width="228dp"
        android:layout_height="54dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/convergence"
        android:text="@string/back_to_home"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editUserBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>