<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradiant_bg"
    tools:context=".editPassword">


    <EditText
        android:id="@+id/passwordEdit"
        android:layout_width="197dp"
        android:layout_height="47dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:fontFamily="@font/convergence"
        android:hint="@string/your_new_password"
        android:inputType="textPassword"
        android:textColorHint="#505050"
        android:textColor="#000000"
        android:minHeight="48dp"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/passwordLbl"
        app:layout_constraintTop_toBottomOf="@+id/editHeader"
        android:importantForAutofill="no" />


    <EditText
        android:id="@+id/rePasswordEdit"
        android:layout_width="197dp"
        android:layout_height="47dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:fontFamily="@font/convergence"
        android:hint="@string/your_new_password"
        android:inputType="textPassword"
        android:textColorHint="#505050"
        android:textColor="#000000"
        android:minHeight="48dp"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/passwordLbl2"
        app:layout_constraintTop_toBottomOf="@+id/passwordEdit"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/passwordLbl"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/convergence"
        android:text="@string/password"
        android:textSize="22sp"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editHeader" />


    <TextView
        android:id="@+id/passwordLbl2"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/convergence"
        android:text="@string/re_enter_password"
        android:textSize="22sp"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLbl" />

    <TextView
        android:id="@+id/editHeader"
        android:layout_width="367dp"
        android:layout_height="111dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/convergence"
        android:text="@string/change_password"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/confirmBtn"
        android:layout_width="137dp"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/convergence"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/backBtn"
        android:layout_width="137dp"
        android:layout_height="48dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/convergence"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginBottom="40dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/confirmBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLbl2" />

</androidx.constraintlayout.widget.ConstraintLayout>